--- a/ex00/Cinema/pom.xml
+++ b/ex00/Cinema/pom.xml
@@ -26,11 +26,11 @@
 <!--      <version>4.13.2</version>-->
 <!--      <scope>test</scope>-->
 <!--    </dependency>-->
-<!--    <dependency>-->
-<!--      <groupId>org.springframework</groupId>-->
-<!--      <artifactId>spring-jdbc</artifactId>-->
-<!--      <version>5.3.13</version>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>5.3.13</version>
+    </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
@@ -46,11 +46,11 @@
       <artifactId>spring-context</artifactId>
       <version>5.3.13</version>
     </dependency>
-<!--    <dependency>-->
-<!--      <groupId>com.zaxxer</groupId>-->
-<!--      <artifactId>HikariCP</artifactId>-->
-<!--      <version>3.3.1</version>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>com.zaxxer</groupId>
+      <artifactId>HikariCP</artifactId>
+      <version>3.3.1</version>
+    </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-nop</artifactId>
@@ -109,5 +109,15 @@
         </plugin>
       </plugins>
     </pluginManagement>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                  <source>8</source>
+                  <target>8</target>
+              </configuration>
+          </plugin>
+      </plugins>
   </build>
 </project>
