--- a/ex00/Cinema/src/main/webapp/WEB-INF/web.xml
+++ b/ex00/Cinema/src/main/webapp/WEB-INF/web.xml
@@ -24,4 +24,13 @@
 <!--        <servlet-name>signIn</servlet-name>-->
 <!--        <url-pattern>/signIn</url-pattern>-->
 <!--    </servlet-mapping>-->
+
+
+<!--        <init-param>-->
+<!--            <param-name>version</param-name>-->
+<!--            <param-value>2.3.123</param-value>-->
+<!--        </init-param>-->
+
+
+
 </web-app>
